--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 logs
  .log
 npm-debug.log 
-yarn-debug.log*
+yarn-debug.log 
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
-# Diagnostic reports (https://nodejs.org/api/report.html)
+  Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Runtime data
@@ -128,4 +128,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-  
+   
